--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@capacitor/status-bar": "6.0.1",
     "@ionic/angular": "^8.0.0",
     "cli": "^1.0.1",
+    "http-proxy-middleware": "^3.0.3",
     "ionicons": "^7.0.0",
     "jsqr": "^1.4.0",
     "rxjs": "~7.8.0",
@@ -62,7 +63,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.4.0"
+    "typescript": "^5.5.4"
   },
   "description": "An Ionic project"
 }
